--- a/styles.css
+++ b/styles.css
@@ -78,4 +78,19 @@ p {
 	color: red; 
 }
 
+.image-container {
+	display: grid;
+	grid-template-columns: 20% 40% 20% 20%;
+	background-color: rgb(231, 231, 231);
+	grid-template-rows: 100%;
+	justify-content: center;
+	justify-items: center;
+	height: 600px;
+	width: 100%;
+}
+
+.image {
+	max-height: 100%;
+	display: block;
+}
 
